🦟 FIX:  Map on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ form .validate.error {
 
 .main {
   grid-column: 1/-1;
-  height: max(60rem, 100%);
+  height: max(40rem, 100%);
 }
 
 .data {
